# celery-no-need-restart-workers-when-code-update

./: docker-compose.yml  pyproject.toml
app/: celery_app.py  celery_conf.py
app/tasks/: main.py
app/tasks_impl/: main.py
scripts/: run_celery_worker.sh
